test/fail/inputnonexistent.app
//not defined

application test

section functions

define page home(i : Int) {
  input(nonexistent)
}
